fix: api controller, feat: base UI

--- a/src/EShop.Api/appsettings.Development.json
+++ b/src/EShop.Api/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=EShop;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "JwtConfig": {
+    "Algorithm": "HS256",
+    "Audience": "https://localhost:7192",
+    "Issuer": "dev-dotnet",
+    "SecretKey": "B%K}~&8t%](Tyn^K#7|pQN{o5,&.,?Jh,L&+.DNP-<8;h*n4>^f(U[[?:6Fl~9}",
+    "Expires": 1 // Day 
+  },
+  "SmtpConfig": {
+    "From": "nguyen118hoang@gmail.com",
+    "Host": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "nguyen118hoang@gmail.com",
+    "Password": "szak mutv vfww ujhl"
   }
 }
