feat: update product list, detail

--- a/src/EShop.Application/EShop.Application.csproj
+++ b/src/EShop.Application/EShop.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EShop.Domain\EShop.Domain.csproj" />
+    <ProjectReference Include="..\EShop.Presentation\EShop.Shared\EShop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
