--- a/src/EShop.Presentation/EShop.Api/appsettings.Development.json
+++ b/src/EShop.Presentation/EShop.Api/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
   "ConnectionStrings": {
