feat: code cart service

--- a/src/EShop.Presentation/EShop.Api/appsettings.Development.json
+++ b/src/EShop.Presentation/EShop.Api/appsettings.Development.json
@@ -5,8 +5,8 @@
       "Microsoft": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Warning"
     }
   },
   "ConnectionStrings": {
