--- a/src/OcelotGateway/appsettings.json
+++ b/src/OcelotGateway/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ReRoutes": [],
+  "GlobalConfiguration": {}
 }
