--- a/src/Identity.Api/appsettings.Development.json
+++ b/src/Identity.Api/appsettings.Development.json
@@ -10,7 +10,8 @@
     "Audience": "https://localhost:7192",
     "Issuer": "dev-dotnet",
     "SecretKey": "B%K}~&8t%](Tyn^K#7|pQN{o5,&.,?Jh,L&+.DNP-<8;h*n4>^f(U[[?:6Fl~9}",
-    "Expires": 1 // Day 
+    "Expires": 30, // minutes
+    "RefreshTokenExpiryTime": 10 //days 
   },
   "SmtpConfig": {
     "From": "nguyen118hoang@gmail.com",
