feat: jwt token

--- a/src/Order/Order.Domain/Order.Domain.csproj
+++ b/src/Order/Order.Domain/Order.Domain.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Event\" />
+    <Compile Remove="Event\**" />
+    <EmbeddedResource Remove="Event\**" />
+    <None Remove="Event\**" />
   </ItemGroup>
 
 </Project>
