feat: basket service

--- a/src/Basket.Api/appsettings.Development.json
+++ b/src/Basket.Api/appsettings.Development.json
@@ -7,5 +7,13 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=EShopBasket;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "JwtConfig": {
+    "Algorithm": "HS256",
+    "Audience": "https://localhost:7192",
+    "Issuer": "dev-dotnet",
+    "SecretKey": "B%K}~&8t%](Tyn^K#7|pQN{o5,&.,?Jh,L&+.DNP-<8;h*n4>^f(U[[?:6Fl~9}",
+    "Expires": 30, // minutes
+    "RefreshTokenExpiryTime": 10 //days 
   }
 }
