--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Telerik.UI.for.Blazor" Version="5.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Enums\" />
+    <Folder Include="Models\ResponseModels\Order\" />
+  </ItemGroup>
+
 </Project>
