--- a/src/Basket.Api/Basket - Backup.Api.csproj
+++ b/src/Basket.Api/Basket - Backup.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="IntegrationEvents\PublishEvents\" />
+    <Folder Include="IntergraionEvents\NewFolder\" />
   </ItemGroup>
 
 </Project>
