--- a/src/Identity.Api/Identity.Api.csproj
+++ b/src/Identity.Api/Identity.Api.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
 		<PackageReference Include="MimeKit" Version="4.7.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.1" />
 	</ItemGroup>
 </Project>
